--- a/frontend/aboutus.html
+++ b/frontend/aboutus.html
@@ -82,7 +82,7 @@
             <li><a href="./index.html">Home</a></li>
             <li class="active"><a href="./aboutus.html">About Us</a></li>
             <li><a href="./services.html">Services</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
+            <li class="d-none"><a href="./gallery.html">Gallery</a></li>
             <li><a href="./contact.html">Contact Us</a></li>
           </ul>
         </div>
@@ -116,24 +116,27 @@
             <div class="col-md-6">
               <h3><span> Explore Us a </span>Little More</h3>
               <p>
-                London hardly had any solution for man with a van removals
-                requirements of the population when we started our journey in
-                the city. Of course, there were market players who used to serve
-                the movement needs during the shifting of people but then the
-                severity of the situations hardly bothered anyone. London hardly
-                had any solution for man with a van removals requirements of the
-                population when we started our journey in the city. Of course,
-                there were market players who used to serve the movement needs
-                during the shifting of people but then the severity of the
-                situations hardly bothered anyone.
+                London faced a notable shortage of viable options for
+                individuals seeking man with a van removals services when we
+                embarked on our journey in the city. While there were existing
+                service providers catering to the relocation needs of the
+                population, the challenges posed by such situations were often
+                overlooked. London lacked comprehensive solutions for the
+                removal requirements of individuals in need. Although some
+                market players did offer assistance during people's relocations,
+                the gravity of the circumstances was not a primary concern for
+                many.
               </p>
               <p>
-                When we stepped in, it took us time to understand the
-                significance of such services for those who trust us with their
-                requirements and expect us to fulfil the same.Our experts
-                developed this understanding and dealt with each removals
-                requirement with utmost importance, thereby becoming the topmost
-                choice of the public in the UK.
+                Upon entering the industry, it took us a considerable amount of
+                time to fully comprehend the significance of the services we
+                provide for those who place their trust in us. Our clients rely
+                on us to meet their specific requirements, and it was crucial
+                for us to grasp the importance of these needs. Through the
+                dedication and expertise of our team, we cultivated a profound
+                understanding of each removals requirement, treating each with
+                the utmost importance. This commitment has propelled us to
+                become the foremost choice for the public in the UK.
               </p>
             </div>
             <div class="col-md-6">
@@ -149,24 +152,19 @@
             <div class="col-md-6">
               <h3>Our <span>Team </span></h3>
               <p>
-                Acquiring the position that we have achieved in the market now
-                wouldn’t have been easy without the support that we received
-                from our removals executives. Our <b> removal service </b> is
-                considered as the best because we have the best set of skilled
-                individuals to take care of the requirements.
+                Attaining our current market position was a challenging feat,
+                and it wouldn't have been possible without the unwavering
+                support from our team of removals executives. Our
+                <b> removal service </b> stands out as the premier choice due to
+                the exceptional skills and dedication of our team members, who
+                excel in meeting the diverse needs of our clients
               </p>
               <h3>Our <span>Pricing </span></h3>
               <p>
-                Budget is something that plays an important role in determining
-                whether an individual is going to take up a particular service
-                or not. Hence, we ensure offering the most affordable removals
-                service to our customers. You can connect with our individuals
-                to know more about our pricing.
+                Recognizing the crucial role that budget plays in shaping an individual's choice of services, we emphasize affordability in our removals service to accommodate a diverse range of customers. Our team is readily available for discussions, allowing you to delve deeper into our pricing structure and explore how we can offer you a cost-effective solution.
               </p>
               <p>
-                Whether you are looking for the best London removal or South
-                west removal service, Quick Trip Removals is the name you are
-                most likely to come across while making a search.
+                Whether you're seeking excellence in removal services in London or the South West, SMK Removals is the name that consistently emerges in your search. Feel free to connect with us for unparalleled service and support.
               </p>
             </div>
             <div class="col-md-6">
@@ -310,10 +308,17 @@
           </p>
           <div>
             <div class="socialMedia">
-              <i class="fa-brands fa-facebook fa-2xl"></i>
-              <i class="fa-brands fa-facebook-messenger fa-2xl"></i>
-              <i class="fa-brands fa-whatsapp fa-2xl"></i>
-              <i class="fa-brands fa-instagram fa-2xl"></i>
+              <a href="https://www.facebook.com/" target="_blank"
+              > <i class="fa-brands fa-facebook fa-2xl"></i></a>
+            <a href="https://twitter.com/" target="_blank"
+              ><i class="fa-brands fa-square-twitter fa-lg fa-2xl"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><i class="fa-brands fa-instagram fa-lg fa-2xl"></i
+            ></a>
+            <a href="https://www.linkedin.com/" target="_blank"
+              ><i class="fa-brands fa-linkedin fa-lg fa-2xl"></i
+            ></a>
             </div>
             <a href="./index.html#quote"
               >Get a free quote <i class="fa-solid fa-right-long"></i
@@ -352,7 +357,7 @@
         </div>
       </div>
 
-      <div class="slider">
+      <div class="slider d-none">
         <div class="owl-carousel owl-theme owwl">
           <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
           <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
@@ -374,11 +379,11 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutus.html">About Us</a></li>
           <li><a href="./services.html">Services</a></li>
-          <li><a href="./gallery.html">Gallery</a></li>
+          <li class="d-none"><a href="./gallery.html">Gallery</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
-          © Copyright 2023 House Mover. All rights reserved. Original and
+          © Copyright 2023 SMK Removals Ltd. All rights reserved. Original and
           exclusive content.
         </p>
       </div>
