--- a/frontend/services.html
+++ b/frontend/services.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
 
     <!-- Home CSS -->
-    <link rel="stylesheet" href="./assets/css/home.css" />
+    <link rel="stylesheet" href="./assets/css/Service.css" />
 
     <!-- owl slider -->
     <link
@@ -95,7 +95,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./aboutus.html">About Us</a></li>
             <li class="active"><a href="./services.html">Services</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
+            <li class="d-none"><a href="./gallery.html">Gallery</a></li>
             <li><a href="./contact.html">Contact Us</a></li>
           </ul>
         </div>
@@ -129,109 +129,106 @@
           <div class="box box1">
             <h3>House Removal London</h3>
             <p>
-              Quick Trip Removal offers the best removals services in London. We
-              carry all our moves with a well-planned strategy. Our free on-site
-              survey facility is not merely a form-filling exercise. Still, the
-              professional surveyors discuss all the details. They will draw a
-              formal plan in terms of how the complete move will be carried out.
-              We specialise in all Domestic and House Moves.
+              SMK Removal stands out as the premier provider of removals
+              services in London. Our approach to every move is characterized by
+              meticulous planning and a well-thought-out strategy. Our free
+              on-site survey facility goes beyond mere form-filling; our
+              professional surveyors engage in comprehensive discussions to
+              understand all the details of your move. Subsequently, they
+              formulate a formal plan detailing how the entire move will be
+              executed. Our expertise extends to all aspects of Domestic and
+              House Moves, ensuring a seamless and efficient relocation
+              experience for our clients.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
           <div class="box box2">
             <h3>Furniture Removal London</h3>
             <p>
-              Since pianos and house furniture are extremely big and heavy,
-              their transportation is an issue. However big and heavy furniture
-              can be easily transported in our vans. we are here to help you.
-              Quick Trip Removals is a professional furniture mover Company in
-              London.
+              Transporting large and heavy items such as pianos and household
+              furniture can be a challenging task. At SMK Removals, we
+              specialize in addressing this challenge by providing professional
+              furniture moving services in London. Our vans are equipped to
+              handle the size and weight of such items, ensuring their safe and
+              secure transportation. Count on us to assist you with the
+              logistics of moving substantial furniture, making the process
+              smooth and stress-free.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
           <div class="box box1">
             <h3>Office Removal London</h3>
             <p>
-              Office Removal is a specialised service offered to businesses when
-              they need to move their offices to a new location. They are
-              different from house removals in terms of time, budget,
-              organisation, packing methods and supplies. Suppose your inventory
-              can be dismantled or fit in moving crates. In that case, there are
-              no restrictions to the size or type of organisations Top Removals
-              can relocate.
+              Office Removal is a specialized service tailored for businesses
+              undergoing the transition of relocating their offices to a new
+              location. Distinguished from house removals, office relocations
+              involve unique considerations such as time, budget, organization,
+              packing methods, and supplies. Whether your inventory can be
+              dismantled or fits into moving crates, Top Removals has the
+              flexibility to accommodate various sizes and types of
+              organizations. There are no restrictions based on the size or
+              nature of the business we can effectively relocate.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
           <div class="box box2">
             <h3>Container Removals</h3>
             <p>
-              Starting from the movement of a teapoy to your king-size beds, our
-              people take care of everything, which also includes your big or
-              small container. A container is something that is used everywhere
-              from a household sphere to commercial space to an industrial unit.
-              We understand the transportation of these containers requires
-              utmost safety assurance. With us, your items are properly
-              packaged, loaded, moved, and unloaded.
+              From the relocation of small items like teapoys to larger pieces such as king-size beds, our team at SMK Removals handles everything, including the transportation of containers, whether big or small. Containers serve various purposes, from household usage to commercial and industrial applications. Recognizing the diverse applications, we prioritize the utmost safety when it comes to transporting these containers. With SMK Removals, you can trust that your items are meticulously packaged, loaded, moved, and unloaded with precision and care.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
           <div class="box box1">
             <h3>Commercial Removals</h3>
             <p>
               If you are concerned with dealing with the packaged or unpackaged
               goods and items, commercial removals services are for you. When
-              it’s us at Quick Trip Removals, the movement of stored goods from
-              one place to another is safe and secure. As a manufacturer, you
-              can ensure that your products reach customers in good condition
+              it’s us at SMK Removals, the movement of stored goods from one
+              place to another is safe and secure. As a manufacturer, you can
+              ensure that your products reach customers in good condition
               without hampering your reputation in any way. In addition, timely
               deliveries are assured when it’s our experts with you.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
           <div class="box box2">
             <h3>Overseas Removals</h3>
             <p>
               Are you moving from the UK or returning from overseas? If you want
-              to have international removals services, Quick Trip Removals is
-              for you. While there are multiple service providers available
-              around the corner to help you get the best services, you rarely
-              find someone with overseas removals services.
+              to have international removals services, SMK Removals is for you.
+              While there are multiple service providers available around the
+              corner to help you get the best services, you rarely find someone
+              with overseas removals services.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
           <div class="box box1">
             <h3>Compare Removals</h3>
             <p>
-              We move your office/house goods from one place to another in
-              beneficial manners. Our tension-free service can save your time
-              and money. We give the inner calm that your move is being cared
-              for by highly qualified and professional removalists. On our
-              platform, we do not make fake promises. Instead, we always try to
-              give you practical reasons to choose us.
+              We facilitate the relocation of your office or household goods in an efficient and advantageous manner. Our stress-free service is designed to save you both time and money. Rest assured, your move is handled with the utmost care by highly qualified and professional removalists, providing you with a sense of inner calm throughout the process. At our platform, we prioritize transparency and reliability, offering practical reasons for you to choose our services rather than making empty promises.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
           <div class="box box2">
             <h3>Man With A Van Removals</h3>
             <p>
-              Our man with a van service takes care of your transport
-              requirements. We provide a professional service at too competing
-              pricing. When you use our man with a van service, you'll be
-              assigned your move coordinator to ensure your man and van service
-              is as seamless as possible.
+              Our Man with a Van service is designed to address all your transportation needs with professionalism and competitive pricing. When you choose our Man with a Van service, you benefit from a dedicated move coordinator assigned to your project. This ensures that your entire experience with our Man and Van service is smooth and seamless, providing you with the support and coordination needed for a successful move.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
           <div class="box box1">
             <h3>Packaging Materials</h3>
             <p>
-              Quick Trip Removals is available here with Packing Solution to all
-              locations in London the surrounding areas. Regardless of whatever
-              kind of products you want us to move, utilization of superior
-              quality packaging products is essential for keeping them intact.
-              We put the utmost concentration on this very vital fact.
+              SMK Removals proudly offers a comprehensive Packing Solution for
+              all locations in London and its surrounding areas. Regardless of
+              the nature of the products you need us to move, we understand the
+              crucial importance of using high-quality packaging materials to
+              ensure their safety and integrity during transportation. At SMK
+              Removals, we prioritize this vital aspect, providing meticulous
+              attention to detail to guarantee the secure packaging of your
+              belongings.
             </p>
-            <a href="#">Get a Quote</a>
+            <a href="./index.html#quote">Get a Quote</a>
           </div>
         </div>
       </section>
@@ -305,10 +302,17 @@
           </p>
           <div>
             <div class="socialMedia">
-              <i class="fa-brands fa-facebook fa-2xl"></i>
-              <i class="fa-brands fa-facebook-messenger fa-2xl"></i>
-              <i class="fa-brands fa-whatsapp fa-2xl"></i>
-              <i class="fa-brands fa-instagram fa-2xl"></i>
+              <a href="https://www.facebook.com/" target="_blank"
+              > <i class="fa-brands fa-facebook fa-2xl"></i></a>
+            <a href="https://twitter.com/" target="_blank"
+              ><i class="fa-brands fa-square-twitter fa-lg fa-2xl"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><i class="fa-brands fa-instagram fa-lg fa-2xl"></i
+            ></a>
+            <a href="https://www.linkedin.com/" target="_blank"
+              ><i class="fa-brands fa-linkedin fa-lg fa-2xl"></i
+            ></a>
             </div>
             <a href="./index.html#quote"
               >Get a free quote <i class="fa-solid fa-right-long"></i
@@ -369,11 +373,11 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutus.html">About Us</a></li>
           <li><a href="./services.html">Services</a></li>
-          <li><a href="./gallery.html">Gallery</a></li>
+          <li class="d-none"><a href="./gallery.html">Gallery</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
-          © Copyright 2023 House Mover. All rights reserved. Original and
+          © Copyright 2023 SMK Removals Ltd. All rights reserved. Original and
           exclusive content.
         </p>
       </div>
