--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -95,7 +95,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./aboutus.html">About Us</a></li>
             <li><a href="./services.html">Services</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
+            <li class="d-none"><a href="./gallery.html">Gallery</a></li>
             <li class="active"><a href="./contact.html">Contact Us</a></li>
           </ul>
         </div>
@@ -187,15 +187,22 @@
         </form>
         <div class="policyTerms">
           <p>
-            By clicking Send, I agree to House Mover Privacy Policy and Terms of
-            Service.
+            By clicking Send, I agree to House Mover Privacy Policy and Terms
+            of Service.
           </p>
           <div>
             <div class="socialMedia">
-              <i class="fa-brands fa-facebook fa-2xl"></i>
-              <i class="fa-brands fa-facebook-messenger fa-2xl"></i>
-              <i class="fa-brands fa-whatsapp fa-2xl"></i>
-              <i class="fa-brands fa-instagram fa-2xl"></i>
+              <a href="https://www.facebook.com/" target="_blank"
+              > <i class="fa-brands fa-facebook fa-2xl"></i></a>
+            <a href="https://twitter.com/" target="_blank"
+              ><i class="fa-brands fa-square-twitter fa-lg fa-2xl"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><i class="fa-brands fa-instagram fa-lg fa-2xl"></i
+            ></a>
+            <a href="https://www.linkedin.com/" target="_blank"
+              ><i class="fa-brands fa-linkedin fa-lg fa-2xl"></i
+            ></a>
             </div>
             <a href="./index.html#quote"
               >Get a free quote <i class="fa-solid fa-right-long"></i
@@ -222,9 +229,7 @@
         <div class="info">
           <h4>Contact US</h4>
           <a href="tel:0318-0126925"> 0318-0126925 </a>
-          <a href="muhammadyahiya166@gmail.com">
-            muhammadyahiya166@gmail.com
-          </a>
+          <a href="muhammadyahiya166@gmail.com"> muhammadyahiya166@gmail.com </a>
         </div>
 
         <div class="nationWide">
@@ -238,102 +243,18 @@
 
       <div class="slider">
         <div class="owl-carousel owl-theme owwl">
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
-          <div class="item">
-            <img
-              src="./assets/Images/pic1.png"
-              alt="Pics"
-              width="100"
-              height="100"
-            />
-          </div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
         </div>
       </div>
 
@@ -342,11 +263,11 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutus.html">About Us</a></li>
           <li><a href="./services.html">Services</a></li>
-          <li><a href="./gallery.html">Gallery</a></li>
+          <li class="d-none"><a href="./gallery.html">Gallery</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
-          © Copyright 2023 House Mover. All rights reserved. Original and
+          © Copyright 2023 SMK Removals Ltd. All rights reserved. Original and
           exclusive content.
         </p>
       </div>
