--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -63,23 +63,13 @@
             <i class="fa-solid fa-phone"></i>
             <a href="tel:03180126925">0318-0126925</a>
             <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:muhammadyahiya166@gmail.com"
-              >muhammadyahiya166@gmail.com</a
-            >
+            <a href="mailto:muhammadyahiya166@gmail.com">muhammadyahiya166@gmail.com</a>
           </div>
           <div class="socialMediaIcon">
-            <a href="https://www.facebook.com/" target="_blank"
-              ><i class="fa-brands fa-facebook fa-lg"></i
-            ></a>
-            <a href="https://twitter.com/" target="_blank"
-              ><i class="fa-brands fa-square-twitter fa-lg"></i
-            ></a>
-            <a href="https://www.instagram.com/" target="_blank"
-              ><i class="fa-brands fa-instagram fa-lg"></i
-            ></a>
-            <a href="https://www.linkedin.com/" target="_blank"
-              ><i class="fa-brands fa-linkedin fa-lg"></i
-            ></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-square-twitter fa-lg"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i></a>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i></a>
           </div>
         </div>
       </div>
@@ -125,9 +115,6 @@
     </main>
 
     <footer>
-      <div class="map">
-        <img src="./assets/Images/map.png" alt="mapPic" />
-      </div>
 
       <div class="formDetail">
         <form action="#">
@@ -209,6 +196,10 @@
             ></a>
           </div>
         </div>
+      </div>
+
+      <div class="map">
+        <img src="./assets/Images/map.png" alt="mapPic" />
       </div>
 
       <div class="londonBranch">
