--- a/frontend/aboutus.html
+++ b/frontend/aboutus.html
@@ -33,6 +33,9 @@
       type="image/x-icon"
     />
 
+    <!-- mmenue -->
+    <link rel="stylesheet" href="./assets/css/mmenu.css" />
+
     <!-- main CSS -->
     <link rel="stylesheet" href="./assets/css/main.css" />
 
@@ -78,13 +81,96 @@
           <div id="logo">
             <img src="./assets/Images/logo.png" alt="logo" />
           </div>
-          <ul>
+          <ul class="nav_none">
             <li><a href="./index.html">Home</a></li>
             <li class="active"><a href="./aboutus.html">About Us</a></li>
             <li><a href="./services.html">Services</a></li>
             <li class="d-none"><a href="./gallery.html">Gallery</a></li>
             <li><a href="./contact.html">Contact Us</a></li>
           </ul>
+          <div class="main_mmenu">
+            <div id="page">
+              <div class="menu_icn">
+                <button
+                  class="btn btn-primary"
+                  type="button"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvasRight"
+                  aria-controls="offcanvasRight"
+                  style="background-color: #fff; border: #fff"
+                >
+                  <div class="menu-icon">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                  </div>
+                </button>
+
+                <div
+                  class="offcanvas offcanvas-end"
+                  tabindex="-1"
+                  id="offcanvasRight"
+                  aria-labelledby="offcanvasRightLabel"
+                >
+                  <div class="offcanvas-header">
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="offcanvas"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="offcanvas-body">
+                    <div id="logo_res">
+                      <img
+                        src="./assets/Images/logo.png"
+                        style="height: 100px"
+                        alt="logo"
+                      />
+                    </div>
+                    <div class="nav_resp">
+                      <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li class="active">
+                          <a href="./aboutus.html">About Us</a>
+                        </li>
+                        <li><a href="./services.html">Services</a></li>
+                        <li class="d-none">
+                          <a href="./gallery.html">Gallery</a>
+                        </li>
+                        <li><a href="./contact.html">Contact Us</a></li>
+                      </ul>
+                    </div>
+                    <div class="socialMediaIcon_res">
+                      <a href="https://www.facebook.com/" target="_blank"
+                        ><i class="fa-brands fa-facebook fa-lg"></i
+                      ></a>
+                      <a href="https://twitter.com/" target="_blank"
+                        ><i class="fa-brands fa-square-twitter fa-lg"></i
+                      ></a>
+                      <a href="https://www.instagram.com/" target="_blank"
+                        ><i class="fa-brands fa-instagram fa-lg"></i
+                      ></a>
+                      <a href="https://www.linkedin.com/" target="_blank"
+                        ><i class="fa-brands fa-linkedin fa-lg"></i
+                      ></a>
+                    </div>
+                    <div class="nav_right_res">
+                      <a
+                        href="https://api.whatsapp.com/send?phone=03180126925&text=Hello!"
+                        target="_blank"
+                      >
+                        <i class="fa-brands fa-whatsapp"></i> 03180126925</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--menu_icn end here-->
+            </div>
+            <!-- </div> -->
+            <!-- page close -->
+          </div>
         </div>
         <div class="nav_right">
           <a
@@ -161,10 +247,18 @@
               </p>
               <h3>Our <span>Pricing </span></h3>
               <p>
-                Recognizing the crucial role that budget plays in shaping an individual's choice of services, we emphasize affordability in our removals service to accommodate a diverse range of customers. Our team is readily available for discussions, allowing you to delve deeper into our pricing structure and explore how we can offer you a cost-effective solution.
+                Recognizing the crucial role that budget plays in shaping an
+                individual's choice of services, we emphasize affordability in
+                our removals service to accommodate a diverse range of
+                customers. Our team is readily available for discussions,
+                allowing you to delve deeper into our pricing structure and
+                explore how we can offer you a cost-effective solution.
               </p>
               <p>
-                Whether you're seeking excellence in removal services in London or the South West, SMK Removals is the name that consistently emerges in your search. Feel free to connect with us for unparalleled service and support.
+                Whether you're seeking excellence in removal services in London
+                or the South West, SMK Removals is the name that consistently
+                emerges in your search. Feel free to connect with us for
+                unparalleled service and support.
               </p>
             </div>
             <div class="col-md-6">
@@ -303,22 +397,23 @@
         </form>
         <div class="policyTerms">
           <p>
-            By clicking Send, I agree to House Mover Privacy Policy and Terms
-            of Service.
+            By clicking Send, I agree to House Mover Privacy Policy and Terms of
+            Service.
           </p>
           <div>
             <div class="socialMedia">
-              <a href="https://www.facebook.com/" target="_blank"
-              > <i class="fa-brands fa-facebook fa-2xl"></i></a>
-            <a href="https://twitter.com/" target="_blank"
-              ><i class="fa-brands fa-square-twitter fa-lg fa-2xl"></i
-            ></a>
-            <a href="https://www.instagram.com/" target="_blank"
-              ><i class="fa-brands fa-instagram fa-lg fa-2xl"></i
-            ></a>
-            <a href="https://www.linkedin.com/" target="_blank"
-              ><i class="fa-brands fa-linkedin fa-lg fa-2xl"></i
-            ></a>
+              <a href="https://www.facebook.com/" target="_blank">
+                <i class="fa-brands fa-facebook fa-2xl"></i
+              ></a>
+              <a href="https://twitter.com/" target="_blank"
+                ><i class="fa-brands fa-square-twitter fa-lg fa-2xl"></i
+              ></a>
+              <a href="https://www.instagram.com/" target="_blank"
+                ><i class="fa-brands fa-instagram fa-lg fa-2xl"></i
+              ></a>
+              <a href="https://www.linkedin.com/" target="_blank"
+                ><i class="fa-brands fa-linkedin fa-lg fa-2xl"></i
+              ></a>
             </div>
             <a href="./index.html#quote"
               >Get a free quote <i class="fa-solid fa-right-long"></i
@@ -345,7 +440,9 @@
         <div class="info">
           <h4>Contact US</h4>
           <a href="tel:0318-0126925"> 0318-0126925 </a>
-          <a href="muhammadyahiya166@gmail.com"> muhammadyahiya166@gmail.com </a>
+          <a href="muhammadyahiya166@gmail.com">
+            muhammadyahiya166@gmail.com
+          </a>
         </div>
 
         <div class="nationWide">
@@ -359,18 +456,102 @@
 
       <div class="slider d-none">
         <div class="owl-carousel owl-theme owwl">
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
         </div>
       </div>
 
@@ -398,10 +579,10 @@
 
     <!-- Jquery Script -->
     <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
     <!-- Owl Carosel Script -->
     <script
@@ -410,6 +591,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
+    <!-- mmenu -->
+    <script src="./assets/js/mmenu.min.all.js"></script>
 
     <!-- Owl.js -->
     <script src="./assets/js/owl.js"></script>
